examples/compiler_errors/inv_lit.gs
val	not_a_float64	%0
